# Vehicle_ReID

./: .gitignore  DataGenerator.py  DataIter.py  Module_Combine.py  Predictor.py  Solver.py  Test.py  TopN.py  Train.py  Train2.py  Train_Distribution_Batch_Plate.py  Train_Parallel.py  Train_Parallel_Batch.py  Train_Parallel_Batch_Plate.py  Train_Parallel_Combine.py  VisualTopN.py  car_reid-symbol.json  create_test_train.py  draw.py  exclude.list  get_car_list.py  reid_net.json  reid_net_graph  show_rnum.sh  visual_transfer.sh
MDL_PARAM/: custom_layers.py  inception_renet_v2  inception_renet_v2_proxy_nca  model0.py  model1.py  model1_softmax.py  model1_softmax2.py  model2.py  model2_proxy_nca.py  model2_proxy_nca_combine.py  model2_softmax.py  model3_proxy_nca.py  model4_proxy_nca.py  testmx.py
augmentation_threads/: CMakeLists.txt  augmentor.cc  main.cc  simple_thread_pool.h  test.py
distribution/: copymxnet.sh  del_hosts.py  do.sh  hosts  hosts2  kill-mxnet.py  launch.py
distribution/dmlc-core/tracker/dmlc_tracker/: ssh.py
distribution/mxnet/: callback.py  kvstore.py  kvstore_server.py  lr_scheduler.py  model.py  optimizer.py  symbol.py
distribution/mxnet/module/: base_module.py.bak1  base_module.py.bak2  executor_group.py  module.py
ranker/: CMakeLists.txt  database.cu  database.h  dbtest  do_ranker.cpp  main.cpp  makefile  mytimer.h
release/conan/cuda8.0/: conanfile.py
release/conan/cuda8.0/include/: VReID.h
